<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Model.MetodosCompra">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulocompradeboletos"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compra1"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compra2"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btniniciarsesion14"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/compra3"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btniniciarsesion15"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/compra4"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btnvolver5"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/botonvolver"
        android:layout_gravity="center"
        android:layout_marginTop="150sp"
        android:backgroundTint="@color/verde"/>


</LinearLayout>