<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/gris"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Mapa">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulomapa"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btniniciarsesion7"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/mapa1"
        android:layout_gravity="center"
        android:layout_marginTop="150sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btniniciarsesion8"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/mapa2"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btniniciarsesion9"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/mapa3"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btniniciarsesion10"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/mapa4"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btnvolver3"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/botonvolver"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
</LinearLayout>