<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Model.Informacion">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloinformacion"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btniniciarsesion14"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="200sp"
        android:backgroundTint="@color/verde"
        android:text="@string/info1" />

    <Button
        android:id="@+id/btniniciarsesion15"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/info2"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btniniciarsesion16"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/info3"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
    <Button
        android:id="@+id/btnvolver7"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/botonvolver"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/verde"/>
</LinearLayout>