<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/gris"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.IniciarSesion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/iniciarsesion"
        android:textColor="@color/black"
        android:textSize="30sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:hint="@string/Nombrecompleto"
        android:layout_marginTop="50sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:hint="@string/contraseñainiciosesion"
        android:layout_marginTop="10sp"/>
    <Button
        android:id="@+id/btnsiguiente22"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/botoniniciarsesion"
        android:textColor="@color/white"
        android:backgroundTint="@color/verde"/>

</LinearLayout>