<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MenuInicio">



  <Button
      android:id="@+id/btniniciarsesion1"
      android:layout_width="140dp"
      android:layout_height="48dp"
      android:text="@string/botoniniciarsesion"
      android:layout_gravity="center"
      android:layout_marginTop="150sp"
      android:backgroundTint="@color/verde"/>
  <Button
      android:id="@+id/btniniciarsesion2"
      android:layout_width="150dp"
      android:layout_height="50dp"
      android:text="@string/botonmenuprincipal"
      android:layout_gravity="center"
      android:layout_marginTop="50sp"
      android:backgroundTint="@color/verde"/>

  <ImageView
      android:layout_width="450dp"
      android:layout_height="180dp"
      android:layout_gravity="center"
      android:contentDescription="@string/descimageninicio"
      android:src="@drawable/monitoinicio" />
  <Button
      android:id="@+id/btnvolver1"
      android:layout_width="140dp"
      android:layout_height="48dp"
      android:text="@string/botonvolver"
      android:layout_gravity="center"
      android:layout_marginTop="150sp"
      android:backgroundTint="@color/verde"/>



</LinearLayout>